--- a/30.04.2024/VScode3/locadora/src/main/resources/templates/index.html
+++ b/30.04.2024/VScode3/locadora/src/main/resources/templates/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Locadora de Veículos</title>
+    <title>Brum Locadora</title>
     <link rel="stylesheet" th:href="@{/styles.css}">
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>Locadora de Veículos</h1>
+            <h1>Locadora</h1>
             <div class="user-area">
-                <a href="#" class="btn">Login</a>
+                <a href="/login" class="btn">Login</a>
                 <a href="#" class="btn  ">Cadastro</a>
             </div>
             <nav>
@@ -41,16 +41,16 @@
             <div class="feature-item">
                 <img src="car-icon.png" alt="Ícone de Carro">
                 <h3>Variedade de Veículos</h3>
-                <p>Oferecemos uma ampla seleção de veículos, desde compactos até SUVs de luxo.</p>
+                <p>Oferecemos uma ampla seleção de veículos, desde esportivos até SUVs de luxo.</p>
             </div>
             <div class="feature-item">
                 <img src="service-icon.png" alt="Ícone de Serviço">
-                <h3>Atendimento Personalizado</h3>
+                <h3>Atendimento</h3>
                 <p>Nossa equipe está pronta para ajudá-lo a encontrar o veículo ideal para suas necessidades.</p>
             </div>
             <div class="feature-item">
                 <img src="location-icon.png" alt="Ícone de Localização">
-                <h3>Localizações Convenientes</h3>
+                <h3>Localizações</h3>
                 <p>Com várias filiais em todo o país, estamos sempre próximos de você.</p>
             </div>
         </div>
@@ -58,7 +58,7 @@
 
     <section class="testimonials">
         <div class="container">
-            <h2>Depoimentos de Clientes</h2>
+            <h2>Avaliações</h2>
             <div class="testimonial">
                 <p>"Excelente serviço! Aluguei um carro por uma semana e tudo correu perfeitamente. Recomendo!"</p>
                 <cite>João Silva</cite>
